# uv-bump

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
src/: cli.rs  diff.rs  lib.rs  lockfile.rs  main.rs  pyproject.rs
wix/: main.wxs
