[package]
name = "uv-bump"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/javidahmed64592/uv-bump"
license = "GPL-3.0-or-later"

[[bin]]
name = "uv-bump"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
owo-colors = "4.3.0"
tempfile = "3.27.0"
toml = "1.1.2"
toml_edit = "0.25.12"

[profile.dist]
inherits = "release"
lto = "thin"
