[package]
name = "uv-align"
version = "0.1.0"
description = "Update pyproject.toml dependency constraints using versions resolved by uv."
edition = "2024"
repository = "https://github.com/javidahmed64592/uv-align"
homepage = "https://github.com/javidahmed64592/uv-align"
license = "MIT"
authors = ["Javid Ahmed <javidahmed@icloud.com>"]

[package.metadata.wix]
upgrade-guid = "D5322CA2-252D-4596-BADB-B46F01EC9D2C"
path-guid = "1456BD68-0714-498B-B2A8-17AF23973F16"
license = false
eula = false

[[bin]]
name = "uv-align"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
owo-colors = "4.3.0"
tempfile = "3.27.0"
toml = "1.1.2"
toml_edit = "0.25.12"

[profile.dist]
inherits = "release"
lto = "thin"
