[build-system]
requires = ["maturin>=1.9.3,<2.0"]
build-backend = "maturin"

[project]
name = "uv-align"
version = "0.1.1"
description = "Align `pyproject.toml` dependency constraints with versions resolved by `uv`."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Javid Ahmed", email = "javidahmed@icloud.com" }
]
keywords = ["uv", "dependencies", "python", "packaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.14.1",
]

[project.urls]
repository = "https://github.com/javidahmed64592/uv-align"
homepage = "https://pypi.org/project/uv-align"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
